# hcc_plan_db_playground

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile-minimal  EULA.rtf  HCC_Plan_Produktanforderungen_PRD.md  PROJECT_ANALYSIS_COMPREHENSIVE.md  README.md  alembic.ini  auto_py_to_exe_conf.json  auto_py_to_exe_conf_deprecated.json  auto_py_to_exe_conf_update.json  billing_services.md  database.py  docker-compose-DIRECT.yml  enum_converter.py  example__fixed_cast.py  guacamole.properties  ideen.txt  install_hcc_plan.ifp  line_profiler_instructions.txt  main.py  migrate_ponyorm_to_sqlmodel.py  pony_models.py  pydantic_upgrade.txt  pyproject.toml  requirements.txt  requiremets.txt  start-hcc-direct-gui.bat  status-hcc-direct-gui.bat  stop-hcc-direct-gui.bat  test_simplify_boolean_expr.py  translation_tools.py  try_out.py  try_out_2.py  try_out__group_tree.py  try_out__simplify_boolean_expr.py  try_out_windows_mode.py  user-mapping-DIRECT.xml
gui/: FrmFlag.py  FrmPlanPeriodInfos.py  actions.py  app.py  app_initialization.py  config.json  data_processing.py  employee_events_window.py  frm_actor_loc_prefs.py  frm_actor_plan_period.py  frm_appointments_to_google_calendar.py  frm_assign_to_team.py  frm_basic_config.py  frm_calclate_plan.py  frm_calculate_plan.py  frm_cast_group.py  frm_cast_rule.py  frm_comb_loc_possible.py  frm_create_google_calendar.py  frm_create_project.py  frm_event_planing_rules.py  frm_excel_export.py  frm_excel_settings.py  frm_fixed_cast.py  frm_flag.py  frm_general_settings.py  frm_group_mode.py  frm_location_plan_period.py  frm_masterdata.py  frm_new_team.py  frm_notes.py  frm_num_actors_app.py  frm_open_panperiod_mask.py  frm_open_plan_period_mask.py  frm_partner_location_prefs.py  frm_plan.py  frm_plan_period.py  frm_plan_period_tab_widget.py  frm_project_select.py  frm_project_settings.py  (+20 more)
gui/api_client/: actor_location_pref.py  actor_partner_location_pref.py  actor_plan_period.py  address.py  appointment.py  avail_day.py  avail_day_group.py  cast_group.py  cast_rule.py  client.py  combination_locations_possible.py  email.py  employee_event.py  employee_event_category.py  event.py  event_group.py  excel_export_settings.py  location_of_work.py  location_plan_period.py  max_fair_shifts_of_app.py  person.py  plan.py  plan_period.py  project.py  required_avail_day_groups.py  skill.py  skill_group.py  team.py  team_actor_assign.py  team_location_assign.py  time_of_day.py  time_of_day_enum.py
gui/auth/: __init__.py  bootstrap.py  login_dialog.py  token_store.py
gui/cache/: IMPLEMENTATION_GUIDE.md  README.md  __init__.py  main_window_integration.py  performance_monitor.py  tab_cache.py
gui/commands/: actor_loc_pref_commands.py  actor_partner_loc_pref_commands.py  actor_plan_period_commands.py  avail_day_commands.py  avail_day_group_commands.py  cast_group_commands.py  cast_rule_commands.py  comb_loc_possible_commands.py  comb_locations_possible.py  command_base_classes.py  event_commands.py  event_group_commands.py  location_of_work_commands.py  location_plan_period_commands.py  person_commands.py  project_commands.py  team_actor_assignment_commands.py  team_commands.py  team_location_assignment_commands.py  time_of_day_commands.py  time_of_day_enum_commands.py
web_api/: branding.py  common.py  config.py  dependencies.py  exceptions.py  main.py  palette.py  pyproject.toml  rate_limit.py  templating.py
(+1003 files in other folders)
