[project]
name = "hcc-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.12",
    "bcrypt>=4.2",
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.35.0",
    "httplib2>=0.22.0",
    "keyring>=25.4",
    "openpyxl>=3.0",
    "ortools>=9.11.4210",
    "pandas >= 2.2",
    "passlib>=1.7",
    "pony>=0.7.19",
    "pydantic[email]>=2.9",
    "pyjwt>=2.9",
    "pyside6>=6.8",
    "requests>=2.32",
    "sympy>=1.13",
    "toml>=0.10",
    "xlsxwriter>=3.2",
    "jinja2>=3.1.2",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0",
    "line-profiler-pycharm>=1.2.0",
    "auto-py-to-exe>=2.5",
    "icecream>=2.1",
    "mypy>=1.17.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
