[project]
name = "hcc-plan"
version = "0.1.0"
description = "Shared database, configuration and tooling for hcc_plan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.12",
    "bcrypt~=5.0",
    "jinja2>=3.1.2",
    "keyring>=25.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.9",
    "psycopg2-binary>=2.9",
    "slowapi>=0.1.9",
    "pytz>=2025.2",
    "requests>=2.32",
    "sqlmodel>=0.0.37",
    "toml>=0.10",
]

[dependency-groups]
dev = [
    "icecream>=2.1",
    "mypy>=1.17.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.setuptools.packages.find]
exclude = ["gui", "gui.*", "web_api", "web_api.*", "alembic", "try_outs", "help", "output", "skills", "scripts", "tests", "docs"]

[tool.uv.workspace]
members = ["gui", "web_api"]