[project]
name = "hcc-plan-web-api"
version = "0.1.0"
description = "FastAPI web platform for hcc_plan"
requires-python = ">=3.12"
dependencies = [
    "hcc-plan",
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "bcrypt>=4.0",
    "cryptography>=43.0",
    "email-validator>=2.3",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "mistune>=3.0",
    "pydantic-settings>=2.7",
    "PyJWT>=2.8",
    "python-frontmatter>=1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

[tool.uv.sources]
hcc-plan = {workspace = true}
